TEST_PROGRAMS/INVALID/alexandre_st-louis_fortier/007-while-statement-condition.min
while print 0 do
    print 1;
done

